@@ -1,3 +1,9 @@
+2014-08-27  Guozhi Wei  <carrot@google.com>
+
+	PR target/62262
+	* config/aarch64/aarch64.md (*andim_ashift<mode>_bfiz): Check the shift
+	amount before using it.
+
 2014-08-26  Joel Sherrill <joel.sherrill@oarcorp.com>
 
 	* doc/invoke.texi: -fno-cxa-atexit should be -fno-use-cxa-atexit.
